--- a/projeto-site/public/dashboard.html
+++ b/projeto-site/public/dashboard.html
@@ -20,10 +20,11 @@
     
 <body>
     <aside class="aside_dash">
-        <img class="logo_dash" src="imagem/LETS.png" alt="">
+		<img class="logo_dash" src="imagem/LETS.png" alt="">
+		<div id="msg"></div>
         <ul class="ul_dash">
             <a class="a_dash" href="dashboard.html"><li class="li_dash">Perfil</li></a>
-            <a class="a_dash" href="#"><li class="li_dash">Apostas</li></a>
+            <a class="a_dash" href="apostas.html"><li class="li_dash">Apostas</li></a>
             <a class="a_dash" href="#"><li class="li_dash">Carteira</li></a>
         </ul>
     </aside>
@@ -44,32 +45,17 @@
         <input class="inp_dash" type="text"></input>
 
 <div class="container_dash">
-    <button id="btn" class="btn_dash">Valorant & Warzone</button>
-    <button  style="display: none;">CS:GO & LOL</button>
-    <div class="grafico_1" style="width:35%; display: block;">
+    <div class="grafico_1" style="width:35%;">
         <canvas id="can_vitoria1"></canvas>
     </div>
-    <div class="grafico_2" style="width:35%; display: block;">
+    <div class="grafico_2" style="width:35%;">
     <canvas id="can_derrota1"></canvas>
     </div>
-    <div class="grafico_3" style="width:35%; display: block;">
+    <div class="grafico_3" style="width:35%;">
         <canvas id="can_vitoria2"></canvas>
     </div>
-    <div class="grafico_4" style="width:35%; display: block;">
+    <div class="grafico_4" style="width:35%;">
         <canvas id="can_derrota2"></canvas>
-    </div>
-    <div class="grafico_5" style="width:35%; display: none;">
-        <canvas id="can_vitoria3"></canvas>
-    </div>
-    <div class="grafico_6" style="width:35%; display: none;">
-        <canvas id="can_derrota3"></canvas>
-    </div>
-    <div class="grafico_7" style="width:35%; display: none;">
-        <canvas id="can_vitoria4"></canvas>
-    </div>
-    <div class="grafico_8" style="width:35%; display: none;">
-        <canvas id="can_derrota4"></canvas>
-    </div>
 </div>
 </body>
 </html>
@@ -80,6 +66,13 @@
 		data: {
 			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
 			datasets: [{
+				label: 'Vitórias',
+				backgroundColor: window.chartColors.green,
+				borderColor: window.chartColors.green,
+				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
+				fill: false,
+			},
+			{
 				label: 'Derrotas',
 				backgroundColor: window.chartColors.red,
 				borderColor: window.chartColors.red,
@@ -91,7 +84,7 @@
 			responsive: true,
 			title: {
 				display: true,
-				text: 'Histórico de Derrotas CS:GO',
+				text: 'Histórico de partidas CS:GO',
 			},
 			tooltips: {
 				mode: 'index',
@@ -113,7 +106,7 @@
 					display: true,
 					scaleLabel: {
 						display: true,
-						labelString: 'Nº de Derrotas'
+						labelString: 'Vitórias x Derrotas'
 					}
 				}]
 			}
@@ -131,46 +124,8 @@
 				borderColor: window.chartColors.green,
 				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
 				fill: false,
-			}]
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Histórico de vitórias CS:GO'
 			},
-			tooltips: {
-				mode: 'index',
-				intersect: false,
-			},
-			hover: {
-				mode: 'nearest',
-				intersect: true
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Meses'
-					}
-				}],
-				yAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Nº de Vitórias'
-					}
-				}]
-			}
-		}
-	};
-
-    var config_derrotas_2 = {
-		type: 'bar',
-		data: {
-			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
-			datasets: [{
+			{
 				label: 'Derrotas',
 				backgroundColor: window.chartColors.red,
 				borderColor: window.chartColors.red,
@@ -182,7 +137,7 @@
 			responsive: true,
 			title: {
 				display: true,
-				text: 'Histórico de derrotas LOL'
+				text: 'Histórico de partidas Valorant'
 			},
 			tooltips: {
 				mode: 'index',
@@ -204,7 +159,59 @@
 					display: true,
 					scaleLabel: {
 						display: true,
-						labelString: 'Nº de derrotas'
+						labelString: 'Vitórias x Derrotas'
+					}
+				}]
+			}
+		}
+	};
+
+    var config_derrotas_2 = {
+		type: 'bar',
+		data: {
+			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
+			datasets: [{
+				label: 'Vitórias',
+				backgroundColor: window.chartColors.green,
+				borderColor: window.chartColors.green,
+				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
+				fill: false,
+			},
+			{
+				label: 'Derrotas',
+				backgroundColor: window.chartColors.red,
+				borderColor: window.chartColors.red,
+				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
+				fill: false,
+			}]
+		},
+		options: {
+			responsive: true,
+			title: {
+				display: true,
+				text: 'Histórico de partidas LOL'
+			},
+			tooltips: {
+				mode: 'index',
+				intersect: false,
+			},
+			hover: {
+				mode: 'nearest',
+				intersect: true
+			},
+			scales: {
+				xAxes: [{
+					display: true,
+					scaleLabel: {
+						display: true,
+						labelString: 'Meses'
+					}
+				}],
+				yAxes: [{
+					display: true,
+					scaleLabel: {
+						display: true,
+						labelString: 'Vitórias x Derrotas'
 					}
 				}]
 			}
@@ -222,46 +229,8 @@
 				borderColor: window.chartColors.green,
 				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
 				fill: false,
-			}]
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Histórico de vitórias LOL'
 			},
-			tooltips: {
-				mode: 'index',
-				intersect: false,
-			},
-			hover: {
-				mode: 'nearest',
-				intersect: true
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Meses'
-					}
-				}],
-				yAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Nº de Vitórias'
-					}
-				}]
-			}
-		}
-	};
-
-    var config_derrotas_3 = {
-		type: 'bar',
-		data: {
-			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
-			datasets: [{
+			{
 				label: 'Derrotas',
 				backgroundColor: window.chartColors.red,
 				borderColor: window.chartColors.red,
@@ -273,7 +242,7 @@
 			responsive: true,
 			title: {
 				display: true,
-				text: 'Histórico de derrotas Valorant'
+				text: 'Histórico de partidas Warzone'
 			},
 			tooltips: {
 				mode: 'index',
@@ -295,153 +264,16 @@
 					display: true,
 					scaleLabel: {
 						display: true,
-						labelString: 'Nº de Derrotas'
-					}
-				}]
-			}
-		}
-	};
-	
-	
-    var config_vitórias_3 = {
-		type: 'bar',
-		data: {
-			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
-			datasets: [{
-				label: 'Vitórias',
-				backgroundColor: window.chartColors.green,
-				borderColor: window.chartColors.green,
-				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
-				fill: false,
-			}]
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Histórico de vitórias Valorant'
-			},
-			tooltips: {
-				mode: 'index',
-				intersect: false,
-			},
-			hover: {
-				mode: 'nearest',
-				intersect: true
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Meses'
-					}
-				}],
-				yAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Nº de Vitórias'
+						labelString: 'Vitórias x Derrotas'
 					}
 				}]
 			}
 		}
 	};
 
-    var config_derrotas_4 = {
-		type: 'bar',
-		data: {
-			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
-			datasets: [{
-				label: 'Derrotas',
-				backgroundColor: window.chartColors.red,
-				borderColor: window.chartColors.red,
-				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
-				fill: false,
-			}]
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Histórico de derrotas Warzone'
-			},
-			tooltips: {
-				mode: 'index',
-				intersect: false,
-			},
-			hover: {
-				mode: 'nearest',
-				intersect: true
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Meses'
-					}
-				}],
-				yAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Nº de Derrotas'
-					}
-				}]
-			}
-		}
-	};
+   
 	
-	
-    var config_vitórias_4 = {
-		type: 'bar',
-		data: {
-			labels: ["Jan","Fev","Mar","Abr","Jun","Jul","Ago","Set","Out","Nov","Dez"],
-			datasets: [{
-				label: 'Vitórias',
-				backgroundColor: window.chartColors.green,
-				borderColor: window.chartColors.green,
-				data: ["61","52","43","72","61","61","52","43","72","61","43","72"],
-				fill: false,
-			}],
-		},
-		options: {
-			responsive: true,
-			title: {
-				display: true,
-				text: 'Histórico de vitórias Warzone'
-			},
-			tooltips: {
-				mode: 'index',
-				intersect: false,
-			},
-			hover: {
-				mode: 'nearest',
-				intersect: true
-			},
-			scales: {
-				xAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Meses',
- 					}
-				}],
-				yAxes: [{
-					display: true,
-					scaleLabel: {
-						display: true,
-						labelString: 'Nº de Vitórias'
-					}
-				}]
-			}
-		}
-	};
-	
-	
-
-    function plotarGrafico() {
+ function mostrar() {
 
 // Gráfico CS:GO
 var ctx = document.getElementById('can_vitoria1').getContext('2d');
@@ -454,19 +286,10 @@ window.graficoLinha = new Chart(ctx, config_vitórias_2);
 var ctx = document.getElementById('can_derrota2').getContext('2d');
 window.graficoLinha = new Chart(ctx, config_derrotas_2);
 // Gráfico Valorant
-var ctx = document.getElementById('can_vitoria3').getContext('2d');
-window.graficoLinha = new Chart(ctx, config_vitórias_3);
-var ctx = document.getElementById('can_derrota3').getContext('2d');
-window.graficoLinha = new Chart(ctx, config_derrotas_3);
-// Gráfico Warzone
-var ctx = document.getElementById('can_vitoria4').getContext('2d');
-window.graficoLinha = new Chart(ctx, config_vitórias_4);
-var ctx = document.getElementById('can_derrota4').getContext('2d');
-window.graficoLinha = new Chart(ctx, config_derrotas_4);
+
 }
 
-// indicando que a função "plotarGrafico" será invocada assim que a página carregar
-window.onload = plotarGrafico;
-	
+window.onload = mostrar;
+
 
 </script>
