--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -30,15 +30,15 @@
         </div>
         <div>
             <a href="login.html"><img class="index_img" src="imagem/LOL2.jpg" alt=""></a>
-            <h2>League of Legends</h2>
+            <h2 class="lol">League of Legends</h2>
         </div>
         <div>
             <a href="login.html"><img class="index_img" src="imagem/valorant.jpg" alt=""></a>
-            <h2>Valorant</h2>
+            <h2 class="valor">Valorant</h2>
         </div>
         <div>
             <a href="login.html"><img class="index_img" src="imagem/warzone.jpg" alt=""></a>
-            <h2>Call of Duty MW: Warzone</h2>
+            <h2 class="warzone">Call of Duty MW: Warzone</h2>
         </div>
     </section>
     
