--- a/projeto-site/public/login.html
+++ b/projeto-site/public/login.html
@@ -60,7 +60,7 @@
         <!-- <button onclick="cadastrar()">Cadastrar</button> -->
     
     </section>
-    <img src="imagem/carregando.gif" id="img_aguarde" style="display: none;" width="100px">
+    <img src="imagem/cod.gif" id="img_aguarde" style="display: none;" width="200px">
     
     <div id="div_erro" style="background-color: #bf8899; color: maroon; display: none;">
         Erro no cadastro
